--- a/index.html
+++ b/index.html
@@ -3,109 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
-    <title>VSCode vs Sublime vs Atom packages count</title>
-    <script src="https://d3js.org/d3.v3.min.js"></script>
-    <style>
-      .axis--x path {
-          display: none;
-      }
-    </style>
+    <title>VSCode vs Sublime vs Atom packages stats</title>
   </head>
-  <body>
-    <h1>Popular editor extension(package) quantity comparison chart</h1>
-    <p>Last updated at 2018-02-15 01:19:22 +0000</p>
-    <h2>VSCode</h2>
-    <p>5543</p>
-    <h2>Sublime</h2>
-    <p>4425</p>
-    <h2>Atom</h2>
-    <p>7320</p>
-
-    <a href="https://github.com/Yukaii/package-stats" target="_blank" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-
     <script>
-    var data = [
-      {
-        "name": "VSCode",
-        "count": 5543,
-        "color": "#037CC4"
-      },
-      {
-        "name": "Sublime",
-        "count": 4425,
-        "color": "#FDAF31"
-      },
-      {
-        "name": "Atom",
-        "count": 7320,
-        "color": "#51D0B9"
+      window.onload = function () {
+        window.location = "http://bottoml.in/e/Yukaii/a06877acd1b4399213e0dc08c7560378";
       }
-    ]
-
-    var margin = {top: 20, right: 20, bottom: 70, left: 80},
-      width = 600 - margin.left - margin.right,
-      height = 300 - margin.top - margin.bottom;
-
-    // set the ranges
-    var x = d3.scale.ordinal().rangeRoundBands([0, width], .05);
-
-    var y = d3.scale.linear().range([height, 0]);
-
-    // define the axis
-    var xAxis = d3.svg.axis()
-        .scale(x)
-        .orient("bottom")
-
-
-    var yAxis = d3.svg.axis()
-        .scale(y)
-        .orient("left")
-        .ticks(10);
-
-
-    // add the SVG element
-    var svg = d3.select("body").append("svg")
-        .attr("width", width + margin.left + margin.right)
-        .attr("height", height + margin.top + margin.bottom)
-        .append("g")
-        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-    // scale the range of the data
-    x.domain(data.map(function(d) { return d.name; }));
-    y.domain([0, d3.max(data, function(d) { return d.count; })]);
-
-    // add axis
-    svg.append("g")
-        .attr("class", "x axis")
-        .attr("transform", "translate(0," + height + ")")
-        .call(xAxis)
-        .selectAll("text")
-        .style("text-anchor", "end")
-        .attr("dx", "-.8em")
-        .attr("dy", "-.55em")
-        .attr("transform", "rotate(-90)" );
-
-    svg.append("g")
-        .attr("class", "y axis")
-        .call(yAxis)
-        .append("text")
-        .attr("transform", "rotate(-90)")
-        .attr("y", 5)
-        .attr("dy", ".71em")
-        .style("text-anchor", "end")
-        .text("Count");
-
-
-    // Add bar chart
-    svg.selectAll("bar")
-        .data(data)
-        .enter().append("rect")
-        .attr("class", "bar")
-        .style("fill", function(d, i) { return data[i].color; })
-        .attr("x", function(d) { return x(d.name); })
-        .attr("width", x.rangeBand())
-        .attr("y", function(d) { return y(d.count); })
-        .attr("height", function(d) { return height - y(d.count); });
     </script>
   </body>
 </html>
